# run_pipeline

./: .env  .gitignore  .goreleaser.yaml  AGENTS.md  BIOFORMATS_CHANGES.md  CUCIM_INSTALL.md  CUMULATIVE_SHIFT_FIX.md  QUANTIFICATION_README.md  README.md  README_uv.md  TODO.txt  WORK_SUMMARY_V3.md  check_dimensions.py  convert_to_uv.md  create_test_data.py  debug_drift_correction.py  debug_phase_correlation.py  debug_time_fill_spatial.py  debug_trackpy.py  debug_z_fill.py  go.mod  help_output.txt  make run pipeline gui.md  programming_defaults.txt  pyproject.toml  relabel_masks_contiguous.py  run_pipeline.exe~  run_pipeline.go  run_pipeline_from_anywhere.bat  run_python_pipeline.exe~  run_python_pipeline.go  temp_check_dims.py  test_bioformats_error.py  test_bioformats_java.py  test_check_output_stack.py  test_compare_v2_v3.py  test_cumulative_fix.py  test_drift_correction_real.py  test_gap_filling.py  test_grouping.py  (+20 more)
.github/workflows/: ci.yml  release.yml
Legacy/: bfconvert_file_to_mp4.py  extract_metadata.py
Test_generic_cli_arg_parser/: generic_cli_arg_parser.py
assets/: README_LOGO.md
conda_environments/: README.txt  bioio.yml
conda_envs/: BIOFORMATS_README.md  README.txt  bioformats.yml  bioio.yml  cellpose2.yml  cellpose3.yml  cellpose4.yml  condaenv.vkgb0wos.requirements.txt  convert_to_mp4.yml  convert_to_tif.yml  drift.yml  drift_correct.yml  extract_metadata.yml  fill_greyscale_holes_gpu.yml  filter_image.yml  mask2imagejroi.yml  mask_measure.yml  measure.yml  measure_masks.yml  merge_channels.yml  micro_sam.yml  napari.yml  nd2reader.yml  re-create_all_environments_in_folder.py  re_create_all_environments_in_folder.py  run_ilastik.yml  segment.yml  segment_ernet.yml  segment_nellie.yml  segment_threshold.yml  track_indexed_mask.yml
develop/: bf_extensions.py  bioformats-supported-formats.rst.txt  bioio_test.py  mask_distance_to_point.py  minimal_annotation.yaml  open_file_log.py  small_tmp_test.py  test_def_function.py  test_roi_extraction_2.py
develop/conda_path/: find_anaconda_path.go
develop/drift_correction/: drift_correct_image.py  drift_test  drift_test_2.py
develop/iamgeJ_rois/: mask2roi.py
develop/read_images/: dim_utils.py  get_env_name.py  get_nd2_rois.py  open_file_log.py  python_bioformats_2_tif.py  test_roi_extraction.py
develop/threshold/: literal.py  remove_large_or_small test.py  threshold.py
develop/tracking/: tracking.py
go/find_anaconda_path/: find_anaconda_path.go
logs/: erorrs.txt
output/: watershed_labels.tif
pipeline-designer/: FEATURE_GUIDE.md  FRONTEND_SETUP.md  GLOB_PATTERN_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LEGACY_IMPORT.md  NEXT_STEPS.md  NODE_WIDTH_PERSISTENCE.md  PR_SUMMARY.md  QUICK_REFERENCE.md  README.md  SOCKET_TYPE_VALIDATION.md  VISUAL_EXAMPLES.md  app.go  build.ps1  cli_definitions.go  file_operations.go  go.mod  go.sum  legacy_importer.go  main.go  models.go  package-lock.json  wails.json  yaml_parser.go
pipeline-designer/cli_definitions/: README.md  convert_to_tif.json  file_selector.json  filter_image.json  mask_measure.json  segment_ernet.json
pipeline-designer/frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json
pipeline_configs/: bfconvert_tif_metadata.yaml  bfconvert_to_ometif.yaml  bleach_correct.yaml  config_example.yaml  convert_to_mp4.yaml  convert_to_tif.yaml  convert_to_tif_uv.yaml  copy_files_with_extension.yaml  correct_3d_drift.yaml  deep_learning_01_make_training_set.yaml  denoise_bilateral.yaml  drift_correct.yaml  drift_correct_legacy.yaml  drift_correct_pcc.yaml  drift_correct_pcc_status.yaml  drift_correct_status.yaml  enhance_holes.yaml  enhance_holes_2.yaml  enhance_holes_3.yaml  extract_metadata.yaml  fill_greyscale_holes.yaml  fill_greyscale_small_holes.yaml  fill_mask_gaps.yaml  fill_mask_gaps_test.yaml  fill_mask_timepoints.yaml  filter.yaml  find_maxima.yaml  gaussian_blur.yaml  image_annotation.yaml  image_calculator.yaml  incucyte2ometif_merged.yaml  input_qc.yaml  intensity_clip_normalize.yaml  mask2imageJROI.yaml  mask_get_distance_matrix.yaml  mask_get_edges.yaml  mask_measure.yaml  mask_measure_hierarchical.yaml  mask_substract.yaml  mask_watershed_cut.yaml  (+35 more)
processing_pipelines/: image_annotation.yaml  image_segmentation_cellpose.yaml
run_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
segmentation_strategy/: SOP_RescueSegmentation.md
standalone_apps/convert_to_tif_gui/: BIPHUB_Image_Converter_v0.0.13.spec  README.md  build_standalone.ps1  convert_to_tif_gui.py  local_convert_to_tif.py  local_extract_metadata.py  pyproject.toml
standard_code/: __init__.py  bf2tifwmetadata.py  bfconvert_file.py  bfconvert_file_to_ometif.py  bfconvert_folder.py  convert_to_mp4.py  convert_to_tif.md  convert_to_tif.py  drift_correct_file.py  extract_metadata.py  get_mask_by_threshold.py  measure_rois.py  merge_channels.py  metadata.py  run_pipeline_helper_functions.py  segment_threshold.py  test_roi_extraction.py  test_roi_extraction_2.py
standard_code/NIS_Elemens_macros/: NIS_Elements_Macro_Language_Summary.md  biphub_3d-decon_BETA_v0001.mac  biphub_multifile_open_v2.mac  biphub_multifile_open_v2_python.mac  biphub_multifile_open_v3.mac  biphub_multifile_open_v4.mac  debug.yaml  debug_status.yaml  open_split_ome_tif_recording.mac  record_save_file.mac  test_call_ij.txt  test_call_pipeline.mac  test_convert_to_nd2.mac
standard_code/NIS_Elements_GA3_python/: DIAGRAMS.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_Cellpose.md  STRATEGY_UV_MODULES.md  external_module_base.py  ga3_run_cellpose.py  ga3_run_cellpose_Conda-Python.py  ga3_run_cellpose_NIS-Python.py  ga3_run_cellpose_UV-Python.py  ga3adapter.py
standard_code/NIS_Elements_GA3_python/cellpose_module/: .gitignore  README.md  cellpose_worker.py  ga3_cellpose_node.py  pyproject.toml  test_cellpose_module.py
temp/: do_not_delete_this.txt
test_code/: hello_args.py
tests/: conftest.py  test_bioimage_pipeline_utils.py  test_fill_greyscale_holes.py  test_gaussian_blur.py  test_segment_threshold_simple.py
(+1049 files in other folders)
