[project]
name = "ga3-cellpose"
version = "0.1.0"
description = "Cellpose integration for NIS-Elements GA3 using UV-managed environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cellpose>=3.0",
    "numpy>=1.24",
    "torch>=2.0",  # GPU support
]

[project.optional-dependencies]
cpu = [
    "torch==2.0.1+cpu",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = []
